@@ -22,6 +22,13 @@ replace restart {
 } if notUsed(%1)
 
 replace restart {
+	popw	%1
+	pushw	%1
+} by {
+	; peephole 1a removed dead popw / pushw pair.
+} if notUsed(%1)
+
+replace restart {
 	ld	a, %1
 	cpl	a
 	ld	%1, a
